2001-04-14  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: show current filename in app titles

2001-04-13  Bill Gribble  <grib@billgribble.com>

	* Bug fixes and a couple of new features for MDI stuff.  

	* src/scm/prefs.scm: new option to set MDI mode (prefs/general)

	* src/gnome/{window-acct-tree.c,window-report.c,window-main.c}:
	bug fixes to handle runtime MDI mode changes.  
	
2001-04-13  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/*: update several reports to use
	the new date option api.

	* src/scm/options.scm: change date options to return
	the same values as they accept.

	* src/guile/option-util.c: update for new date option api.
	wrap scheme api for C.

	* src/gnome/dialog-options.c: update for new date option api.
	fix bugs.

	* src/gnome/query-user.c: fixes for no toplevel window

	* src/gnome/window-main.c (gnc_main_window_get_toplevel): check
	for NULL

2001-04-13  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/balance-sheet.scm: Cleanup code. Use new funcs
	from html-utilities.

	* src/scm/report/stylesheet-{plain,fancy}.scm: Added some styles
	for table-cells.

	* src/scm/html-utilities.scm (gnc:html-acct-table-cell),
	(gnc:html-acct-table-row-helper!),
	(gnc:html-acct-table-comm-row-helper!): Added functions i.e. moved
	them out of gnc:html-build-acct-table. Use table-cell-markup
	instead of direct markup-b.

	* Several reports: Added option page "Account" or "Display" so
	that every report has those.

2001-04-12  Bill Gribble  <grib@billgribble.com>

	* Lots and lots of changes to support Gnome MDI.  And I thought it
	would be an easy way to get that toolbar problem fixed.  Short
	story is lots of function prototypes changed to reflect the notion
	that there is no longer a single top-level gnucash window or
	account tree.  41 files changed, which is too many for me to
	itemize :)

	* src/gnome/window-acct-tree.{c,h}: new file; the "account tree