@@ -1,5 +1,9 @@
 2001-04-14  Dave Peticolas  <dave@krondo.com>
 
+	* src/scm/path.scm: version the .gnucash/config* files.
+
+	* src/scm/: change several other files to use versioned config
+
 	* src/gnome/window-main.c: show current filename in app titles
 
 2001-04-13  Bill Gribble  <grib@billgribble.com>
